# Multitask-Reminder

./: README.md  ci_trigger.txt  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/reminder/: scheduler.rs
src-tauri/src/storage/: db.rs
src/components/: ReminderForm.tsx  ReminderList.tsx
src/games/: GameContainer.tsx  HeadsOrTails.tsx  RockPaperScissors.tsx  TicTacToe.tsx  index.ts  types.ts
src/hooks/: useReminders.ts
src/lib/: sounds.ts  tauri.ts
src/pages/: Popup.tsx  Settings.tsx
