[package]
name = "multitask-reminder"
version = "0.1.0"
description = "A multi-task reminder application with mini-game dismissals"
authors = ["Jakob"]
edition = "2021"

[lib]
name = "multitask_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
urlencoding = "2"
